grokui.admin changes
********************

0.4.1 (unreleased)
==================

0.4 (2009-08-21)
================

Feature changes
---------------

* Added a security notifier to inform users when security issues are
  published on http://grok.zope.org. The notifier must be explicitly
  enabled. You can also run your own site/directory to place security
  notifications.

* Added info views to get important information easier with tools like
  ``curl``. Supported infos:

    - Grok version used

    - Current security notification (if any).

Bug fixes
---------

* Adapting this package to use the new version of grokcore.view 
  which splits View into CodeView.

* Upgraded the versions to the alpha 4 list to avoid a dependency
  problem with zope.container versions.

* Include the new grok.View permissions for testing.

0.3.2 (2009-04-10)
==================

* Added dependency for zope.app.preference. This is needed by
  zope.app.apidoc but not always fetched.

0.3.1 (2009-04-09)
==================

* Fixed missing dependencies in setup.py.

0.3 (2008-12-13)
================

Feature changes
---------------

* Added capability to pack ZODBs (thanks to Jasper Spaans).

0.2 (2008-12-01)
================

Feature changes
---------------

* Added capability to rename apps.

0.1.2 (2008-09-28)
==================

* Made server controls dependent from availability of
  `IServerControl`. Otherwise the buttons for restarting or stopping
  the server process are not rendered.


0.1.1 (2008-08-05)
==================

* Fixed wrong links in docgrok template.

* Fixed ftesting.zcml that did not work with Grok 0.13.


0.1 (2008-07-10)
================

Feature changes
---------------

Initial implementation by factoring out ``grok.admin`` from ``grok``.